trying to fix table layout issue

--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -43,7 +43,6 @@ table.simple td {
 }
 .mainpanel {
 	padding: 18px;
-	overflow-x: auto;
 }
 
 pre {
